--- a/chapter1.tex
+++ b/chapter1.tex
@@ -25,38 +25,38 @@ value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This 'Topon' is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f 2 {n}$
-and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} ~ (l_{macro} /\lambdabar_e )^{2} $, followed by $$l_{macro} /\lambdabar_{e} ~
+and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} ~ (l_{macro} /\lambdabar_e )^{2} $, followed by $$l_{macro} /\lambdabar_{e} \sim
 (\lambdabar_{e} /l_{micro} )^2 :
-\lambdabar_{e} /\lambdabar_{M} ~ (R/ \lambdabar_{e} ) 2 ~ ( \lambdabar_e / \lambdabar_X ) 4 ~ (λ CMB / \lambdabar_e ) 8 ~ ( \lambdabar_{e} / \lambdabar_{W} ) 16 ~ (2r H / \lambdabar_{e} ) 32 ~ ( \lambdabar_{e} / l Gl ) 64 ~ ( \lambdabar_{str} / \lambdabar_{e} ) 128 ~ 2^{256}$$
+\lambdabar_{e} /\lambdabar_{M} \sim (R/ \lambdabar_{e} )^{2} \sim ( \lambdabar_e / \lambdabar_X )^{4} \sim (\lambda_ {CMB} / \lambdabar_e )^{8} \sim ( \lambdabar_{e} / \lambdabar_{W} )^{16} \sim (2r H / \lambdabar_{e} )^{32} \sim ( \lambdabar_{e} / l_{Gl} )^{64} \sim ( \lambdabar_{str} / \lambdabar_{e} )^{128} \sim 2^{256}$$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number, and permits to approach each physical length.
-In particular, the relation $R/ \lambdabar_{e} ~ ( CMB / \lambdabar_{e} )^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
+In particular, the relation $R/ \lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e} )^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
-background (CNB), whose wavelength is defined by (  CNB /  CMB ) 3 = 11/4, we have $$R/ \lambdabar_e ~
-(  CNB 2 /  CMB \lambdabar_{e} ) 4 to $1.7{percent}$$. Second, with the Hydrogen radius $$r H(0) = a\lambdabar_{e} , we infer R/r H(0) ~
-(4  CMB /r H(0) ) 4$$ precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
+background (CNB), whose wavelength is defined by $( l_{CNB} / l_{CMB} ) 3 = 11/4$, we have $$R/ \lambdabar_e \sim
+( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4} to $1.7\%$$. Second, with the Hydrogen radius $$r_{H(0)} = a\lambdabar_{e} , we infer R/r H(0) \sim
+(4 \prec l_{CMB} /r_{H(0)} )^{4}$$ precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 In particular, it was noted [1] that a G is of order W 8 , where W is the mass ratio W boson-
 Electron. With the above R value, one observes the following more symmetrical relation involving
-the other (neutral) weak boson Z, in the 0.01{percent} indetermination of W and Z:
-$R/√(\lambdabar_{p} \lambdabar_{H}) ≈ (WZ)^4$
+the other (neutral) weak boson Z, in the 0.01\% indetermination of W and Z:
+$R/√(\lambdabar_{p} \lambdabar_{H}) \approx (WZ)^4$
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Section III, by intervention of canonical mathematical constants.
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
-which is the simplest case of Eddington's statistical theory [2]. The position of a 'reference particle'
-is supposed to be determined with an uncertainty R/2. For N particles of mass m constituting thevisible Universe, the deviance is statistically divided by √N, where N = M/m. If m is assumed to be
-the effective mass of the electron in the Hydrogen atom, m' e = m e p/H, and if, moreover, we equate
-the deviance R/(2√(M/m\prime_{e})) to the Hydrogen wavelength $\lambdabar_{H} = \hbar/cm H$ , we obtain the double relation:
+which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
+is supposed to be determined with an uncertainty ${R/2}$. For \mathfrak{N} particles of mass m components of the visible Universe, the deviance is statistically divided by $√N$, where $N = M/m$. If m is assumed to be
+the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
+the deviance $R/(2√(M/m\prime_{e}))$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/cm H$ , we obtain the double relation:
 $R/2\lambdabar_{H} = √(M/m\prime_e ) = \hbar c/Gm_{e} m_{p}$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
 Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
-for a star containing N s atoms, in which the pressure has reached the quantum degeneracy value
+for a star containing \mathfrak{N} s atoms, in which the pressure has reached the quantum degeneracy value
 (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N s1/3$ .
 So the formula giving the Hubble radius R, a very difficult measurement which puzzled a whole
 century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
@@ -66,7 +66,7 @@ Hubble measurement for R was false by an order of magnitude.
 The reason for this discrepancy is that Lemaître and Hubble considered galaxies of the Local
 Group, which do not participate the so-called Space expansion. In fact, it suffices to introduce a
 repulsive force proportional to galaxy groups separation distance, for explaining the canonical
-exponential recession. There is no need of the so-called 'dark energy', the repulsive force is simply
+exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
 the cosmological constant identified to $1/R 2$ . The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^6$ light years [3], which corresponds, in the Topological
 Axis, to the Atiyah Constant Γ , presented in the Section III, see Fig 1.
@@ -139,19 +139,19 @@ where $l_{P} = (Ghbar/c^3 )^{1/2}$ is the Planck's length. Note that, while the 
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
 uses the Archimedes Testimony tying the Disk Area to its Perimeter.
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
-of space is known as the so-called 'horizon problem', and is at the origin of the awkward inflation
+of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
 The cosmic wavelength $\lambdabar_M ~ 10^{-95} m$ breaks the 'Planck wall' by a factor $l_{P} /\lambdabar_{M} ~ 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
-The gravitational potential energy of a critical homogeneous sphere is -(3/5)GM2/R = -
-(3/10)Mc2, while the nonrelativistic kinetic energy of galaxies is (3/10)Mc2. Their sum is therefore
+The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
+(3/10)Mc2$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
 zero: the density of the so-called 'dark energy' being compatible with 7/10, this dark energy is a
 trivial false problem. As recalled above, Relativity is a local theory that does not apply in
 Cosmology: galaxies actually reach speed c, and crossing the horizon, reach a Grandcosmos of
 radius R GC , given, as a first approximation, by the symmetrical holographic relation, this time
 monochrome instead of the monoradial relation above:
 $S_{BH} = \pi(R/l_P )^{2} = 2\piR (0) GC /l_{P}$
-with $R (0) GC /R = l_{P} /\lambdabar_{M} ~ 10^{61}$ . The conservation of the time constant $t = R/c, = R (0) GC /C$ introduces a canonical velocity $C ~ 10^{61} c$, making appear an energy larger than that of the visible Universe by a
+with $R (0) GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R (0) GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, making appear an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
@@ -179,8 +179,8 @@ Gly at $0.05\%$of the above value.
 In the Hydrogen gravitational molecule model, R is defined by the following 1D-2D-3D Special
 Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
 Hydrogen apear, as well as that of the background radiation
-$2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 ≈ (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
-The above relation gives $T_{CMB} ≈ 2.73 K$. With the measured temperature of the cosmic
+$2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
+The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
 background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p G 2 = P 2 /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
 This eliminates $l_{P}$ , so gives a relation independent of G:
 $$2^{127} = 2\pi 2 \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
@@ -197,7 +197,7 @@ Another shortcoming of this theory is that it does not define any inertial frame
 Doppler dissymmetry of the cosmic background indicates the speed of our local group of galaxies:
 630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
 The mathematical continuity being excluded by the above Calculative Principle, the associated
-time $$\lambdabar_{M} /c = 1.33 \times 10^{-104} s$$ is the new candidate for the 'Chronon', the 'quantum of time', so the
+time $$\lambdabar_{M} /c = 1.33 \times 10^{-104}s$$ is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz$ [5].
 
 \section {Evidence for Tachyonic Flickering Space-Time-Matter}
@@ -208,37 +208,37 @@ following considerations and observations confirm this hypothesis.
 \section {Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a' = aH/p$. It
+Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
-$$Σ(1/n)/Σ(1/n 2 ) = a\prime$$
-with the sum running from 2 to R 1 /\lambdabar_{e} . This implies:
-R 1 = \lambdabar_{e} exp((\pi 2 /6 – 1)a\prime + 1 - \gamma) ≈ 15.77465 Gly
+$$\sum(1/n)/\sum(1/n 2 ) = a\prime$$
+with the sum running from 2 to $R 1 /\lambdabar_{e} . This implies:
+R 1 = \lambdabar_{e} exp((\pi 2 /6 – 1)a\prime + 1 - \gamma) ≈ 15.77465 Gly$
 very close (0.4 ppm) to the following expression, where $p G = P/2 127/2$ , and $β = (Η-p) -1$ is the
 Rydbergh correction factor and $p 0 = 6\pi 5$ the Canonic Lenz-Wiler Approximation of p:
 $R 1 = ( p 0 /p G ) √(βRR')$.
 
-Now, with the Kotov length l_K = ct K , see below, one notes that √(R/a w l K ) is close to √a, while
+Now, with the Kotov length $l_K = ct K$ , see below, one notes that $√(R/a w l K )$ is close to √a, while
 the replacement of R by R 1 is about 4 π , the canonical form for √a, the deviation being compatible
 with p/p 0 , where p 0 = 6π 5 is the Lenz-Wyler approximation for p (Section III.I):
-$$√(R 1 /a w l K ) ≈ 4π p/p0 <=> t_K ≈ 9 600.591445 s$$ a relation independent from G. 
+$$√(R 1 /a w l K ) ≈ 4π p/p0 \Leftrightarrow t_K ≈ 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = √(a_{G} a_{w} )$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
 range, with Γ, the Atiyah Constant (section III.V).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
-associated with the photon mass. With the above value, it is $$m ph = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
+associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
 graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratioes with electron mass(Fig.1) corresponds respectively to n = 24 and n = Γ , the Atiyah constant, see Section III.VIII.
 
 \section {The Kotov Cosmic Coherent Oscillation Period}
 
 The Kotov non-Doppler cosmic oscillation [9] is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
-this as a tachyonic phenomena, we identified the Kotov period t K ≈ 9600.06(2) s, taking the electron
-characteristic time t_{e} = \lambdabar_{e} /c as unit, to the simplest relation eliminating c between $a_{G}$ and $a_w =
-\hbar 3 /G_{F} m_{e}2 c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
+this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
+characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
+\hbar 3 /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
 t_{K} / t_{e} = √(a_{G} a_{w})
-The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c2 ) 2$ is defined from the Fermi energy E_{F} \approx
-292.806161(6) GeV \approx 573007.33(25) m_e c 2 , itself tied to the weak force constant $$G_{F} ≡ (\hbar c) 3 /E_{F} 2 \approx
+The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c2 ) 2$ is defined from the Fermi energy $E_{F} \approx
+292.806161(6) GeV \approx 573007.33(25) m_e c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 $$(\lambdabar_{e} 2/t_{K} )(hbar/√(m_{p} m_{H} )) = √(GG_{F} )$$
@@ -247,14 +247,14 @@ gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ prec
 compatible with the well-elaborate $10^{-5}$ BIPM measurement [11], at several sigmas from the Codata
 value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
-value, with $m_{P} ≡ (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
+value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
 \Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} m^3 s^-2$$
 This value will be confirmed, in the ppb range, in Section III.
 
 \section {The omnipresence of the Kotov cycle in astrophysics}
 
-With t = R/c, the relation (t t K2 ) 1/3 ≈ 10.8 years, compatible with the famous 11 years sun period
+With $t = R/c$, the relation $(t t_{K2} )^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
 climate variation, was also of flickering cosmic origin [12]. This hypothesis has been recently
 confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum
@@ -265,7 +265,7 @@ temporal edge. Moreover, these two periods seem to be tied to the dimensions n =
 characteristics respectively of a stellar system and a galaxy, see Fig.1. As the second period was
 attributed to an earth orbital oscillation due to Jupiter effects, this suggests that the solar system is
 tied to cosmic influence. Indeed, the Kotov period shows itself rather particular in the solar system.
-In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct K$ .
+In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct_{K}$ .
 Remarkable enough, a «mysterious» period ≈ 1/9 days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
 (1946) claimed that « la période propre de vibration du Soleil, c'est-à-dire la période de son infra-
@@ -275,9 +275,9 @@ and distances inside the solar system. Nevertheless, solar pulsations with exact
 discovered, after decades, – and independently of the Sevin's paper, – by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
 Cosmos too (see Kotov, 2018, and references therein) .
-Opponents emphasize often that $t_{K}$ is very close to 9 th harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the $t_{K}$ period – is equal to 8.99943(1), – and claim
+Opponents emphasize often that $t_{K}$ is very close to 9^{th} harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the $t_{K}$ period – is equal to 8.99943(1), – and claim
 thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
-Fossat et al., 2017). As a matter of fact, however, the t K period occurs to be the best commensurate
+Fossat et al., 2017). As a matter of fact, however, the t_K period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
 general.
 This is evident from Fig. 2, which shows the resonance spectrum F(\nu), calculated for 15
@@ -288,7 +288,7 @@ objects; see Kotov, 2018). The peak of the best commensurability corresponds to 
 chance probability $10^{-7}$ .
 It seems very puzzling also that the spatial scale $t_K ≈ 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, – see Fig. 3,
-where the resonance spectrum F(ν) is plotted for 11 orbits, including those of asteroid belt, Pluto
+where the resonance spectrum F(\nu) is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
 were multiplied by π). The primary peak – of the best commensurability – corresponds to the
 spacial scale 9600(120) light sec., or 19.24(3) A.U., at 4.7σ C.L. (Kotov, 2013)
@@ -373,9 +373,9 @@ Arithmetics, founded on prime numbers, but limited to the three M, L and T categ
 R/c, summing the square of $ln(M\prime/m_{e} )$, where $M\prime = R\prime c 2 /2G$ is the critical mass in the above
 holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to
 40 ppm:
-$$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) ≈ ln 2 (R GC /\lambdabar_{e} )$$
+$$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R GC /\lambdabar_{e} )$$
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
-$$ln(√(ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) ≈ 2e – 1/2a$$
+$$ln(√(ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e – 1/2a$$
 This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic
 couple.
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
@@ -394,9 +394,9 @@ believed to be the single mandatory foundation of Space-Time. The warning of Poi
 discoverer of Relativity: 'use 4D space but do not confound Space and Time' has long been
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
-$$l (\hbar,G,m) = \hbar 2 /Gm 3 ≈ R/2$$
+$$l (\hbar,G,m) = \hbar 2 /Gm 3 \approx R/2$$
 but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
-links the time t = R/c and the mean mass density by the c-free formula $$ρ c = 3/8\pi Gt2 ≈ 9.41198 \times
+links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$ρ c = 3/8\pi Gt2 ≈ 9.41198 \times
 10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density ρ c cannot be to
 sustain, meaning that ρ c must be considered as a fundamental constant. This writes:
 $$t{\hbar,ρ c ,G} = 1/ρ c1/2 G 1/2 = (R/c) (8\pi/3) 1/2$$
@@ -415,8 +415,8 @@ Now, the following mandatory c-free times are close each over to $0.7\%$:
 $$T{\hbar,ρ c ,G_{F} } = \hbar 4 /ρ c3/2 G_{F} 5/2 \approx 5.4829 10^{57} s$$
 $$T'{\hbar,G,m} = \hbar 3 /G 2 m 5 \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
-the holic dimension (see below) n = 30, to 4{percent}. Comparing T with the Kotov Non-Doppler Cosmic
-Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04{percent}$:
+the holic dimension (see below) n = 30, to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
+Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /√2$$
 where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
 suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
