--- a/chapter1.tex
+++ b/chapter1.tex
@@ -25,9 +25,9 @@ value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This 'Topon' is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f 2 {n}$
-and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} ~ (l_{macro} /\lambdabar_e )^{2} $, followed by $$l_{macro} /\lambdabar_{e} \sim
-(\lambdabar_{e} /l_{micro} )^2 :
-\lambdabar_{e} /\lambdabar_{M} \sim (R/ \lambdabar_{e} )^{2} \sim ( \lambdabar_e / \lambdabar_X )^{4} \sim (\lambda_ {CMB} / \lambdabar_e )^{8} \sim ( \lambdabar_{e} / \lambdabar_{W} )^{16} \sim (2r H / \lambdabar_{e} )^{32} \sim ( \lambdabar_{e} / l_{Gl} )^{64} \sim ( \lambdabar_{str} / \lambdabar_{e} )^{128} \sim 2^{256}$$
+and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
+(\lambdabar_{e} /l_{micro} )^{2}$ :
+$$\lambdabar_{e} /\lambdabar_{M} \sim (R/ \lambdabar_{e} )^{2} \sim ( \lambdabar_e / \lambdabar_X )^{4} \sim (\lambda_ {CMB} / \lambdabar_e )^{8} \sim ( \lambdabar_{e} / \lambdabar_{W} )^{16} \sim (2r_{H} / \lambdabar_{e} )^{32} \sim ( \lambdabar_{e} / l_{Gl} )^{64} \sim ( \lambdabar_{str} / \lambdabar_{e} )^{128} \sim 2^{256}$$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
@@ -35,7 +35,7 @@ dramatic appearance of the Eddington Large Number, and permits to approach each 
 In particular, the relation $R/ \lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e} )^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
 background (CNB), whose wavelength is defined by $( l_{CNB} / l_{CMB} ) 3 = 11/4$, we have $$R/ \lambdabar_e \sim
-( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4} to $1.7\%$$. Second, with the Hydrogen radius $$r_{H(0)} = a\lambdabar_{e} , we infer R/r H(0) \sim
+( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer $$R/r_{H(0)} \sim
 (4 \prec l_{CMB} /r_{H(0)} )^{4}$$ precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
